--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,16 @@ body {
 
 span {
   margin-right: 15px;
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+}
+
+button {
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  font-size: 16px;
+  margin: 0 5px 5px 0;
 }
 /*# sourceMappingURL=style.css.map */
