--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
-body {
-  margin: 20px;
-  font-family: "Open Sans", sans-serif;
-}
+body { margin: 20px; font-family: "Open Sans", sans-serif; }
 
-span {
-  margin-right: 15px;
-  display: inline-block;
-  height: 25px;
-  line-height: 25px;
-}
+span { margin-right: 15px; display: inline-block; height: 25px; line-height: 25px; }
 
-button {
-  width: 25px;
-  height: 25px;
-  padding: 0;
-  font-size: 16px;
-  margin: 0 5px 5px 0;
-}
-/*# sourceMappingURL=style.css.map */
+button { width: 25px; height: 25px; padding: 0; font-size: 16px; margin: 0 5px 5px 0; }
